js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-import-defer-no-new-call-expression-prop-access.js








































$DONOTEVALUATE();

{
  new import.defer('./empty_FIXTURE.js').prop;
};
